# new-tech-monorepo

./: .gitignore  README.md
ai-agent-first/: README.md  main.jsonl  main.py  main_langgraph.jsonl  main_langgraph.py  pyproject.toml
apollo-server-first/: README.md
astrojs-first/: README.md  package-lock.json  package.json  tsconfig.json
course-practical-deep-learning/: .gitignore  README.md  juypter_primer.md  part_1.ipynb  part_1.md  part_2.md  pyproject.toml
dapp-full-stack/: README.md
deno-first/: README.md  deno.json  main.ts  server.ts  ts_notebook.ipynb
doom-fps__ai/: ADDING_WEAPONS.md  ANIMATION_SYSTEM.md  BUGFIX.md  README.md  SUMMARY.md  WEAPON_SYSTEM.md  WEAPON_VISIBILITY_FIX.md  animation-plan.md  enemy-plan.md  index.html  package-lock.json  package.json  plan.md  vite.config.ts  weapon-plan.md
duckdb-first/: .gitignore  README.md  main.py  pyproject.toml
extractthinker-first/: README.md  main.py  pyproject.toml
extractthinker-llm/: README.md  main.py  pyproject.toml
fastapi-hugging-face/: Makefile  README.md  pyproject.toml  run_model.py
golang-first/: README.md  basics.go  (+5 more)
langchain-python-first/: README.md  ollama_basic.py  ollama_retrieval_basic.py  ollama_retrieval_conversation.py  pyproject.toml  utils.py
music-analysis/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  settings.yaml
music-analysis/data/: 01_A_extracted_music_by_year.md  01_B_cleaned_playlist.md  01_B_unrecognized_playlist.md  02_A_ytmusic_failed_tracks.txt  02_A_ytmusic_track_ids.csv  02_A_ytmusic_track_ids.txt  playlist.md  playlist_clean.txt  playlist_uncategorized.txt  raw_extracted_music_by_year.md
music-analysis/scripts/: __init__.py  analyze.py  download.py  ingest.py  playlists.py  run_all.py
music-analysis/scripts/01_preprocess/: A_extract_lines.py  B_clean_lines.py  B_normalize_tracks_to_csv.py  __init__.py
music-analysis/scripts/02_create/: A_get_ids_for_spotify.py  A_get_ids_for_ytmusic.py  B_build_playlists_ytmusic.py  README.md  SKIPPED_A_get_ids_for_spotify.py  SKIPPED_B_build_playlists_spotify.py  __init__.py
music-analysis/scripts/03_download/: README.md  __init__.py  download_audio_yt.py
music-analysis/scripts/04_analyze/: __init__.py  analyze_features.py
music-analysis/scripts/05_synthesize/: __init__.py
music-analysis/scripts/core/: __init__.py  audio_features.py  downloader.py  md_parser.py  playlist_spotify.py  utils.py
music-analysis/src/: __init__.py  cli.py  downloader.py  md_parser.py  playlist_ytmusic.py  search_match.py  visualize.py
music-analysis/tests/: __init__.py  conftest.py  test_dedupe.py  test_features.py  test_md_parser.py
open-source-chatgpt-operator/: README.md  pyproject.toml  run_agent_basic.py  run_agent_basic_with_config.py
opentelemetry-first/: README.md  main.py  pyproject.toml
python-multi-tenancy-first/: .env.example  README.md  app.py  auth.py  db.py  models.py  plan.md  pyproject.toml  requirements.txt  seed.py
python-multi-tenancy-first/docs/: design_for_multi_tenancy.md  plan_restructure.md
python-multi-tenancy-first/src/multi_tenancy/: app.py  db.py  models.py  seed.py
python-multi-tenancy-first/tests/: conftest.py  test_app.py  test_auth.py
python-registry-first/: README.md  config.yaml  plugin_base.py  pyproject.toml  runner.py
python-registry-first/plugins/: compress.py  resize.py  watermark.py
python-registry-first/tests/: test_plugins.py
python-robotics-mujoco-first__ai/: pyproject.toml
python-robotics-mujoco-first__ai/src/: 01_falling_box_gui.py  01_falling_box_headless.py  02_slider_motor_gui.py  02_slider_motor_headless.py  03_pendulum_reset_gui.py  03_pendulum_reset_headless.py  04_two_link_pd_gui.py  04_two_link_pd_headless.py  05_ball_plate_gui.py  05_ball_plate_headless.py  06_collision_demo_gui.py  06_collision_demo_headless.py  07_collision_upgraded_demo_gui.py  07_collision_upgraded_demo_headless.py  mujoco_helpers.py  offscreen_render_headless.py
python-robotics-simulation-first__ai/: .gitignore  README.md  main.py  pyproject.toml
python-robotics-simulation-first__ai/control/: controller.py
python-robotics-simulation-first__ai/sensors/: ble_receiver.py  real_ble.py  rssi.py  simulated_ble.py
python-robotics-simulation-first__ai/sim/: drive_base.py  encoders.py  maze.py  robot.py  runner.py  world.py
python-robotics-simulation-first__ai/src/maze_robot/: __init__.py
python-robotics-simulation-first__ai/src/maze_robot/sensors/: ray_sensor.py
python-robotics-simulation-first__ai/tests/: test_controller.py  test_maze.py  test_ray_sensor.py  test_robot.py  test_rssi.py  test_simulation.py
python-textual-first/: README.md  main.py  pyproject.toml
rag__ai/rag-faiss/: 1_build_embeddings.py  2_build_faiss_ivf_index.py  3_hybrid_query.py  3_rag_query.py  4_evaluate.py  README.md  pyproject.toml  streamlit_app.py
rag__ai/rag-ollama/: .gitignore  README.md  pyproject.toml  run_chatbot.py  run_embed_documents.py  tools.py  vector_db.py
rag__ai/rag-ollama/sample_docs/: much_ado_about_nothing.txt
redis-valkey-first/: CHANGELOG.md  Makefile  README.md  manual_test.py  pyproject.toml  pytest.ini
redis-valkey-first/src/: cache_service.py  main.py
redis-valkey-first/tests/: test_cache_service.py  test_integration.py
wordllama-first/: .gitignore  README.md  main.py  pyproject.toml  wordllama_usage.py
wordllama-first/climate_change_texts/: Climate Change and Health ( PDFDrive ).txt  Climate Change and Migration.txt  Climate change, water stress, conflict and migration • Climate change, conflict and migration ( PDFDrive ).txt  Environmental Policy and Public Health_ Air Pollution, Global Climate Change, and Wilderness (Public Health Environmental Health) ( PDFDrive ).txt  Himalayan Glaciers_ Climate Change, Water Resources, and Water Security ( PDFDrive ).txt  This Changes Everything_ Capitalism vs. The Climate ( PDFDrive ).txt
yt-music-playlist/: README.md  pyproject.toml
yt-music-playlist/src/: build_spotify_playlist.py  build_ytmusic_playlist.py  download_from_youtube.py  helpers.py  songs.txt
yt-music-playlist/tests/: test_helpers.py
(+179 files in other folders)
