[project]
name = "ai-agent-first"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"  # required for loguru
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "ollama (>=0.5.3,<0.6.0)",
    "langgraph (>=0.6.6,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
