[project]
name = "course-practical-deep-learning"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = ">=2.3.5,<3.0.0"
fastai = ">=2.8.5,<3.0.0"
gradio = ">=6.0.1,<7.0.0"
scikit-image = ">=0.25.2,<0.26.0"
torch = "^2.9.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"


[[tool.poetry.source]]
name = "pytorch-repo"
url = "https://download.pytorch.org/whl/cu121"
priority = "primary"

