[tool.poetry]
name = "mp3-analyzer"
version = "0.1.0"
description = "MP3 Playlist Analyzer & Normalizer with audio feature extraction and playlist management"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Audio analysis
librosa = "^0.10.1"
numpy = "^1.26.0"
scipy = "^1.11.0"
# Data manipulation
pandas = "^2.1.0"
# Machine learning
scikit-learn = "^1.3.0"
# Audio download and processing
yt-dlp = "^2023.11.16"
# Playlist APIs
spotipy = "^2.23.0"
ytmusicapi = "^1.3.0"
# Config
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
# Logging
loguru = "^0.7.2"
# Visualization
matplotlib = "^3.8.0"
# Fuzzy matching
rapidfuzz = "^3.5.0"
# Async support
aiohttp = "^3.9.0"
# Data storage
pyarrow = "^14.0.0"
fastparquet = "^2023.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.7.0"
black = "^23.11.0"
ruff = "^0.1.6"
types-pyyaml = "^6.0.12"

[tool.poetry.scripts]
ingest = "scripts.ingest:main"
download = "scripts.download:main"
analyze = "scripts.analyze:main"
playlists = "scripts.playlists:main"
run-all = "scripts.run_all:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
