[project]
name = "redis-valkey-first"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "uvicorn>=0.38.0",
    "valkey>=6.1.1",
]

[dependency-groups]
dev = [
    "fakeredis>=2.32.0",
    "pytest>=8.4.2",
    "colorama>=0.4.6",
]
