[tool.poetry]
name = "wordllama-first"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wordllama = "^0.3.3.post0"
faiss-cpu = "^1.9.0"
chardet = "^5.2.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
langchain-core = "^0.3.15"
langchain-community = "^0.3.5"
langchain-ollama = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
