[project]
name = "rag-ollama"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
requires-python = ">=3.12,<3.15"
dependencies = [
  "ollama",
  "faiss-cpu",
  "numpy",
  "tqdm",
  "python-dotenv"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
